[package]
name = "qubist"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.19.2", features = ["full"] }
clap = { version = "*", features = ["derive"] }
reqwest = { version = "0.11.11" }
futures = "0.3.21"
logos = "*"
owo-colors = "3.4.0"
